--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@ h2{
 .about-p{
     line-height: 1.5;
     font-family: Arial, Helvetica, sans-serif;
+    margin-right: 30%;
+    font-size: 14.5px;
 }
 .span-h1-color{
-    color: orange;
+    color: rgb(255, 136, 0);
 }
 section{
     display: flex;
@@ -37,28 +39,29 @@ section{
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(to right, orange, rgb(238, 73, 44));
-    padding: 15px 30px;
+    padding: 17px 30px;
     border-radius: 40px;
     color: white;
-    font-weight: 700;   
+    font-weight: 500; 
 }
 .about-half-width{
     width: 50%;  
 }
 .about-half-width img{
-    width: 40%;
-    padding-left: 28%;
-    padding-top: 8%;
+    width: 45%;
+    padding-left: 35%;
+    padding-top: 6%;
 
 }
 .bg-image{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 99%;
+    padding-top: 3%;
     
 }
 .text-about{
-    padding-top: 5%;
-    padding-right: 10%;
-    
+    padding-top: 4%;
+    padding-right: 2%;
+    padding-left: 10%;
 }
