--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h2{
 .span-h1-color{
     color: rgb(255, 136, 0);
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
@@ -64,4 +64,38 @@ section{
     padding-top: 4%;
     padding-right: 2%;
     padding-left: 10%;
+}
+
+.equal-width img{
+    width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+}
+.equal-width{
+    width: 60%;
+    box-shadow: 0px 0px 20px 1px rgb(207, 205, 205);
+    margin: 3%;
+    border-radius: 25px;
+    padding: 3px;
+}
+.recipies-text{
+    padding: 5%;
+}
+section{
+    padding: 5%;
+}
+.my-recipie-make{
+    text-align: center;
+}
+.my-recipie-make-p{
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    line-height: 1.3;
+    font-size: 14.5px;
+}
+.div-recipies-p{
+    font-size: 14.5px;
+    line-height: 1.5;
 }
