--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*
 body{
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -98,4 +99,117 @@ section{
 .div-recipies-p{
     font-size: 14.5px;
     line-height: 1.5;
+}
+
+*/
+
+body{
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+}
+h1{
+    font-size: 50px;
+    padding-top: 15%;
+    color: rgba(0, 0, 0, 0.63);
+}
+h2{
+    font-size: 30px;
+    color: rgba(0, 0, 0, 0.562);
+}
+.heading-p{
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.527);
+}
+.about-p{
+    line-height: 1.5;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 30%;
+    font-size: 14.5px;
+}
+.span-h1-color{
+    color: rgb(255, 136, 0);
+}
+.flexible-container{
+    display: flex;
+    margin-bottom: 100px;
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.half-width img{
+    width: 90%;
+    margin-top: 0;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(to right, orange, rgb(238, 73, 44));
+    padding: 17px 30px;
+    border-radius: 40px;
+    color: white;
+    font-weight: 500; 
+}
+.about-half-width{
+    width: 50%;  
+}
+.about-half-width img{
+    width: 49%;
+    padding-left: 35%;
+    padding-top: 10%;
+
+}
+.bg-image{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-size: 100% 99%;
+    padding-top: 3%;
+    
+}
+
+.text-about{
+    padding-top: 6%;
+    padding-right: 2%;
+    padding-left: 10%;
+}
+
+.recipe-flex{
+    display: flex;
+    padding: 5%;
+    margin: 0;
+}
+.recipe-block img{
+    width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+}
+.recipe-block{
+    width: 60%;
+    box-shadow: 0px 0px 20px 1px rgb(207, 205, 205);
+    margin: 2%;
+    border-radius: 25px;
+    padding: 3px;
+    margin-top: -50px;
+}
+.my-recipe-text{
+    padding: 5%;
+}
+.recipe-align{
+    text-align: center;
+    
+}
+.recipe-font-p{
+    text-align:center;
+    margin-left: 20%;
+    margin-right: 20%;
+    line-height: 1.3;
+    font-size: 14.5px;
+}
+.div-recipies-p{
+    font-size: 14.5px;
+    line-height: 1.5;
+}
+h3{
+    font-size: 22px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
