--- a/style.css
+++ b/style.css
@@ -213,3 +213,28 @@ h3{
     font-size: 22px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.apps-part{
+    display: flex;
+    box-shadow: 0px 0px 25px 4px rgb(236, 234, 234);
+    width: 78%;
+    margin-left: 8%;
+    margin-right: 8%;
+    padding-left: 8%;
+    padding-bottom: 2%;
+    padding-top: -20px;
+    border-radius: 20px;
+}
+.div-apps{
+    width: 60%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+.small{
+    font-size: small;
+    margin-top: -20px;
+}
+.bold{
+    font-weight: bold;
+    color: black;
+}
+
