--- a/style.css
+++ b/style.css
@@ -103,6 +103,26 @@ section{
 
 */
 
+ul {
+    list-style-type: armenian;
+    margin: 0px;
+    padding-top: 25px;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.959);
+    padding-bottom: 33px;
+}
+  
+li a {
+    color: rgb(255, 123, 0);
+    text-decoration: none;
+    text-align: end;
+    padding: 15px 15px;
+}
+  
+li {
+    float: left;
+}
+  
 body{
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -221,7 +241,7 @@ h3{
     margin-right: 8%;
     padding-left: 8%;
     padding-bottom: 2%;
-    padding-top: -20px;
+    padding-top: 40px;
     border-radius: 20px;
 }
 .div-apps{
@@ -237,4 +257,17 @@ h3{
     font-weight: bold;
     color: black;
 }
-
+footer {
+    text-align: center;
+    background: black;
+    color: darkgray;
+    padding-bottom: 3%;
+    padding-top: 2%;
+  }
+.footer-color{
+    color: rgb(238, 110, 88);
+}
+.last-color{
+    color: grey;
+    font-size: x-large;
+}
