--- a/style.css
+++ b/style.css
@@ -1,108 +1,3 @@
-/*
-body{
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-}
-h1{
-    font-size: 50px;
-    padding-top: 15%;
-    color: rgba(0, 0, 0, 0.63);
-}
-h2{
-    font-size: 30px;
-    color: rgba(0, 0, 0, 0.562);
-}
-.heading-p{
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.527);
-}
-.about-p{
-    line-height: 1.5;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-right: 30%;
-    font-size: 14.5px;
-}
-.span-h1-color{
-    color: rgb(255, 136, 0);
-}
-.flexible-container{
-    display: flex;
-    margin-bottom: 100px;
-}
-.half-width{
-    width: 50%;
-    padding-left: 5%;
-}
-.half-width img{
-    width: 90%;
-    margin-top: 0;
-}
-.link-button{
-    text-decoration: none;
-    background-image: linear-gradient(to right, orange, rgb(238, 73, 44));
-    padding: 17px 30px;
-    border-radius: 40px;
-    color: white;
-    font-weight: 500; 
-}
-.about-half-width{
-    width: 50%;  
-}
-.about-half-width img{
-    width: 45%;
-    padding-left: 35%;
-    padding-top: 6%;
-
-}
-.bg-image{
-    background-image: url(images/shapes/7.png);
-    background-repeat: no-repeat;
-    background-size: 100% 99%;
-    padding-top: 3%;
-    
-}
-.text-about{
-    padding-top: 4%;
-    padding-right: 2%;
-    padding-left: 10%;
-}
-
-.equal-width img{
-    width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 5%;
-}
-.equal-width{
-    width: 60%;
-    box-shadow: 0px 0px 20px 1px rgb(207, 205, 205);
-    margin: 3%;
-    border-radius: 25px;
-    padding: 3px;
-}
-.recipies-text{
-    padding: 5%;
-}
-section{
-    padding: 5%;
-}
-.my-recipie-make{
-    text-align: center;
-}
-.my-recipie-make-p{
-    text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
-    line-height: 1.3;
-    font-size: 14.5px;
-}
-.div-recipies-p{
-    font-size: 14.5px;
-    line-height: 1.5;
-}
-
-*/
-
 ul {
     list-style-type: armenian;
     margin: 0px;
@@ -257,6 +152,25 @@ h3{
     font-weight: bold;
     color: black;
 }
+
+.time-table{
+    display: flex;
+    box-shadow: 0px 0px 25px 4px rgba(236, 234, 234, 0.959);
+    width: 78%;
+    margin-left: 8%;
+    margin-right: 8%;
+    padding-left: 8%;
+    padding-bottom: 2%;
+    padding-top: 40px;
+    border-radius: 15px;
+}
+.address-hour{
+    width: 50%;
+    padding-left: 10%;
+    padding-right: 10%;
+    color: rgb(152, 206, 224);
+}
+
 footer {
     text-align: center;
     background: black;
@@ -264,9 +178,11 @@ footer {
     padding-bottom: 3%;
     padding-top: 2%;
   }
+
 .footer-color{
     color: rgb(238, 110, 88);
 }
+
 .last-color{
     color: grey;
     font-size: x-large;
